check file button and table modification innerpage action and last tab made with css

--- a/HTML Training Assignment/check.html
+++ b/HTML Training Assignment/check.html
@@ -97,35 +97,35 @@
       <div class="market-numbers">
         <div class="mar12">
           <div>
-          <img src="./images/star.svg" alt="!">
-        </div>
-        <div class="mar123">
-          <p>23,456</p>
-          <p>New Product</p>
-        </div>
-        </div>
-        <div class="mar12">
-          <div>
-          <img src="./images/new-product.svg" alt="!">
-        </div>
-        <div class="mar123">
-          <p>2345</p>
-          <p>Added Products</p>
-        </div>
+            <img src="./images/star.svg" alt="!">
+          </div>
+          <div class="mar123">
+            <p>23,456</p>
+            <p>New Product</p>
+          </div>
         </div>
         <div class="mar12">
           <div>
-          <img src="./images/total-product.svg" alt="!">
-        </div>
-        <div class="mar123">
-          <p>32,456</p>
-          <p>Total Products</p>
-        </div>
+            <img src="./images/new-product.svg" alt="!">
+          </div>
+          <div class="mar123">
+            <p>2345</p>
+            <p>Added Products</p>
+          </div>
         </div>
         <div class="mar12">
           <div>
-          <img src="./images/dollar-filled.svg" alt="">
+            <img src="./images/total-product.svg" alt="!">
+          </div>
+          <div class="mar123">
+            <p>32,456</p>
+            <p>Total Products</p>
+          </div>
         </div>
+        <div class="mar12">
+          <div>
+            <img src="./images/dollar-filled.svg" alt="">
+          </div>
           <div class="mar123">
             <p>5678</p>
             <p>Today's Sales</p>
@@ -133,23 +133,29 @@
         </div>
         <div class="mar12">
           <div>
-          <img src="./images/money-bag.svg" alt="!">
-        </div>
-        <div class="mar123">
-          <p>3,35,342</p>
-          <p>Total Sale</p>
-        </div>
+            <img src="./images/money-bag.svg" alt="!">
+          </div>
+          <div class="mar123">
+            <p>3,35,342</p>
+            <p>Total Sale</p>
+          </div>
         </div>
       </div>
       <div class="charts">
         <div class="chart1">
-          <span>Sales</span>
-          <div class="btn-group" role="group" aria-label="Basic example" style="margin-left: 850px;">
-            <button type="button" class="btn btn-secondary">Left</button>
-            <button type="button" class="btn btn-secondary">Middle</button>
-            <button type="button" class="btn btn-secondary">Right</button>
+          <div class="row">
+            <div class="col">
+              <p>Sales</p>
+            </div>
+            <div class="col">
+              <div class="btn-group" role="group" aria-label="Basic example" style="margin-left: 850px;">
+                <button type="button" class="btn btn-secondary">Weekly</button>
+                <button type="button" class="btn btn-secondary">Monthly</button>
+                <button type="button" class="btn btn-secondary">Yearly</button>
+              </div>
+            </div>
           </div>
-          
+
           <img src="./images/data-graph.png" alt="!">
         </div>
         <div class="chart2">
@@ -157,7 +163,7 @@
           <img src="./images/pie-chart.svg" alt="!">
         </div>
       </div>
-      <table>
+      <table class="table table-hover">
         <caption
           style="text-align:left; caption-side: top; font-weight: 1000;  font-size: medium; letter-spacing: 0px;   color: #3E3E3E;">
           Invoices</caption>
