--- a/HTML Training Assignment/innerpage.html
+++ b/HTML Training Assignment/innerpage.html
@@ -228,8 +228,33 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="actionc">
                             <p>Call to action</p>
-                            
+                            <div class="row">
+                                <div class="col">
+                                    <button type="button" class="btn btn-outline-secondary">Primary</button>
+                                </div>  
+                                <div class="col">
+                                    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+                                </div>
+                            </div>
+                        </div>
+                            <p>Tabs</p>
+                            <nav>
+                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Tab1</button>
+                                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Tab2</button>
+                                  <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Tab3</button>
+                                </div>
+                              </nav>
+                              <div class="tab-content" id="nav-tabContent">
+                                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non incidunt adipisci ipsa amet nulla excepturi quibusdam mollitia delectus sit natus.</div>
+                                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto odit quis ut voluptatibus. Praesentium inventore dignissimos quas corporis nihil consectetur consequuntur aperiam voluptates nesciunt, animi ullam unde reiciendis possimus ad!
+
+                                </div>
+                                <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam dolore corrupti perferendis nam consequuntur quas excepturi asperiores saepe, labore aspernatur corporis esse neque voluptatibus eveniet molestiae optio fuga? Voluptatem commodi sunt deleniti quidem quas ipsum tenetur sint fugiat aspernatur?</div>
+                              </div>
+
                         </div>
                 </form>
             </div>
