dashboard and index file js bundle file in script at last and css file sidebar shadow updated

--- a/HTML-TrainingAssignment/index.html
+++ b/HTML-TrainingAssignment/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6 bg-white d-flex align-items-center p-4 p-md-5 order-lg-2 order-2">
+                <div class="col-lg-6 bg-white d-flex align-items-center p-4 p-md-5 order-lg-2 order-2 ">
                     <div class="w-100">
                         <img src="./images/logo.svg" alt="Company Logo" class="mb-4" height="50">
 
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
