navbar responsive login page responsive

--- a/HTML-TrainingAssignment/index.html
+++ b/HTML-TrainingAssignment/index.html
@@ -27,14 +27,17 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6 bg-white d-flex align-items-center p-4 p-md-5 order-lg-2 order-2 ">
+                <div class="col-lg-6 bg-white d-flex align-items-sm-center p-4 p-md-5 order-lg-2 order-2 ">
                     <div class="w-100">
-                        <img src="./images/logo.svg" alt="Company Logo" class="mb-4" height="50">
+                        <div class="text-icon-wrapper">
+                            <img src="./images/logo.svg" alt="Company Logo" class="mb-4" height="50">
 
-                        <h1 class="fw-light fs-3 text-dark mb-2">
-                            We are <span class="fw-black text-danger">experts</span> in business,<br>
-                            marketing, growth, & sales.
-                        </h1>
+                            <h1 class="fw-light fs-3 text-dark mb-2 ">
+                                We are <span class="fw-black text-danger">experts</span> in business,<br>
+                                marketing, growth, & sales.
+                            </h1>
+
+                        </div>
 
                         <p class="text-muted fs-5 mb-4">Login into your account</p>
                         <form>
