--- a/HTML-TrainingAssignment/dashboard.html
+++ b/HTML-TrainingAssignment/dashboard.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
- <link rel="stylesheet" href="./css/style3.css">
+  <link rel="stylesheet" href="./css/style3.css">
 </head>
+
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-white border-bottom shadow-sm fixed-top">
+  <nav class="navbar navbar-lg bg-white border-bottom shadow-sm fixed-top">
     <div class="container-fluid px-4">
       <div class="d-flex align-items-center gap-3">
-        <button class="btn d-lg-none p-0 border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarOffcanvas">
+        <button class="btn d-lg-none p-0 border-0" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#sidebarOffcanvas">
           <span class="navbar-toggler-icon"></span>
         </button>
         <a href="#" class="navbar-brand py-0">
@@ -21,37 +24,51 @@
         </a>
       </div>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span>navbar</span>
-      </button>
+      <div class="d-flex align-items-center gap-3 ms-auto">
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <form class="d-flex align-items-center mx-lg-auto my-3 my-lg-0 search-box">
+        <button class="btn p-0 d-md-none" data-bs-toggle="modal" data-bs-target="#searchModal">
+          <img src="./images/search-icon.svg" alt="search" height="22">
+        </button>
+
+        <form class="d-none d-md-flex align-items-center search-box">
           <img src="./images/search-icon.svg" alt="search" height="18" class="me-2">
           <input class="form-control border-0 shadow-none" type="search" placeholder="Search">
         </form>
 
-        <ul class="navbar-nav align-items-center gap-4 ms-lg-4">
-          <li class="nav-item position-relative">
-           <a href="#"> <img src="./images/notification-icon.svg" alt="notifications" height="22"></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle d-flex align-items-center gap-2 text-dark text-decoration-none" 
-               href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="./images/profile.png" alt="profile" class="rounded-circle" height="32">
-              <span class="d-none d-sm-inline">John Doe</span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">My Profile</a></li>
-              <li><a class="dropdown-item" href="#">Log Out</a></li>
-            </ul>
-          </li>
-        </ul>
+        <div class="position-relative">
+          <a href="#" class="btn p-0">
+            <img src="./images/notification-icon.svg" alt="notifications" height="22">
+          </a>
+        </div>
+
+        <div class="dropdown">
+          <a class="dropdown-toggle d-flex align-items-center gap-2 text-dark text-decoration-none" href="#"
+            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="./images/profile.png" alt="profile" class="rounded-circle" height="32">
+            <span class="d-none d-sm-inline">John Doe</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">My Profile</a></li>
+            <li><a class="dropdown-item" href="#">Log Out</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
 
+  <div class="modal fade.w-100.h-100" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content border-0 shadow">
+        <div class="modal-body p-4">
+          <form class="d-flex align-items-center search-box mx-auto" style="max-width: 500px;">
+            <img src="./images/search-icon.svg" alt="search" height="18" class="me-2">
+            <input class="form-control border-0 shadow-none" type="search" placeholder="Search" autofocus>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="d-flex main-content">
 
     <aside class="d-none d-lg-block bg-white border-end" style="width: 240px; min-height: 100vh;">
@@ -127,7 +144,7 @@
     </div>
 
     <main class="flex-grow-1 p-4 p-md-5 bg-light">
-      <h2 class="mb-4">Dashboard</h2>
+      <h2 class="innermain mb-4  ms-2 ">Dashboard</h2>
 
       <div class="row g-4 mb-5">
         <div class="col-6 col-md-4 col-xl">
@@ -188,7 +205,7 @@
       </div>
       <div class="row g-4 mb-5">
         <div class="col-lg-8">
-          <div class="card shadow-sm">
+          <div class="card shadow-sm h-100">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center mb-4">
                 <h5 class="mb-0">Sales</h5>
@@ -203,46 +220,47 @@
           </div>
         </div>
         <div class="col-lg-4">
-            <div class="card shadow-sm h-100">
-              <div class="card-body text-center">
-                <h5 class="mb-4">Sales By Country</h5>
-                
-                <img src="./images/pie-chart.svg" alt="Pie Chart" class="img-fluid mb-4" style="max-width: 280px;">
-  
-                <div class="row justify-content-center gx-4">
-                  <div class="col-6 col-sm-6 mb-3">
-                    <div class="legend-item">
-                      <div class="legend-color" style="background-color: #d93025;"></div>
-                      <span class="small text-muted">United States of America</span>
-                    </div>
+          <div class="card shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="mb-4">Sales By Country</h5>
+
+              <img src="./images/pie-chart.svg" alt="Pie Chart" class="img-fluid mb-4" style="max-width: 280px;">
+
+              <div class="row justify-content-center gx-4">
+                <div class="col-6 col-sm-6 mb-3">
+                  <div class="legend-item">
+                    <div class="legend-color" style="background-color: #d93025;"></div>
+                    <span class="small text-muted">United States of America</span>
                   </div>
-                  <div class="col-6 col-sm-6 mb-3">
-                    <div class="legend-item">
-                      <div class="legend-color" style="background-color: #f2994a;"></div>
-                      <span class="small text-muted">Russia</span>
-                    </div>
+                </div>
+                <div class="col-6 col-sm-6 mb-3">
+                  <div class="legend-item">
+                    <div class="legend-color" style="background-color: #f2994a;"></div>
+                    <span class="small text-muted">Russia</span>
                   </div>
-                  <div class="col-6 col-sm-6 mb-3">
-                    <div class="legend-item">
-                      <div class="legend-color" style="background-color: #27ae60;"></div>
-                      <span class="small text-muted">Canada</span>
-                    </div>
+                </div>
+                <div class="col-6 col-sm-6 mb-3">
+                  <div class="legend-item">
+                    <div class="legend-color" style="background-color: #27ae60;"></div>
+                    <span class="small text-muted">Canada</span>
                   </div>
-                  <div class="col-6 col-sm-6 mb-3">
-                    <div class="legend-item">
-                      <div class="legend-color" style="background-color: #f2c94c;"></div>
-                      <span class="small text-muted">India</span>
-                    </div>
+                </div>
+                <div class="col-6 col-sm-6 mb-3">
+                  <div class="legend-item">
+                    <div class="legend-color" style="background-color: #f2c94c;"></div>
+                    <span class="small text-muted">India</span>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
       <div class="card ">
         <div class="card-body">
-          <h5 class="mb-4">Invoices <span style=" float: right; margin-right: 10px;"> <a href="#">view all</a></span> </h5>
+          <h5 class="mb-4">Invoices <span style=" float: right; margin-right: 10px;"> <a href="#">view all</a></span>
+          </h5>
           <div class="table-responsive">
             <table class="table table-hover align-middle">
               <thead class="table-light">
@@ -312,11 +330,11 @@
     </main>
   </div>
 
-    </main>
-    
+  </main>
+
   </div>
 
-  <script src="./js/bootstrap.bundle.min.js"
-    ></script>
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
