--- a/HTML-TrainingAssignment/innerpage1.html
+++ b/HTML-TrainingAssignment/innerpage1.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-white border-bottom shadow-sm fixed-top">
+  <nav class="navbar navbar-lg bg-white border-bottom shadow-sm  fixed-top">
     <div class="container-fluid px-4">
       <div class="d-flex align-items-center gap-3">
         <button class="btn d-lg-none p-0 border-0" type="button" data-bs-toggle="offcanvas"
@@ -24,36 +24,51 @@
         </a>
       </div>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span>navbar</span>
-      </button>
+      <div class="d-flex align-items-center gap-3 ms-auto">
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <form class="d-flex align-items-center mx-lg-auto my-3 my-lg-0 search-box">
+        <button class="btn p-0 d-md-none" data-bs-toggle="modal" data-bs-target="#searchModal">
+          <img src="./images/search-icon.svg" alt="search" height="22">
+        </button>
+
+        <form class="d-none d-md-flex align-items-center search-box">
           <img src="./images/search-icon.svg" alt="search" height="18" class="me-2">
           <input class="form-control border-0 shadow-none" type="search" placeholder="Search">
         </form>
 
-        <ul class="navbar-nav align-items-center gap-4 ms-lg-4">
-          <li class="nav-item position-relative">
-            <a href="#"> <img src="./images/notification-icon.svg" alt="notifications" height="22"></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle d-flex align-items-center gap-2 text-dark text-decoration-none" href="#"
-              role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="./images/profile.png" alt="profile" class="rounded-circle" height="32">
-              <span class="d-none d-sm-inline">John Doe</span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">My Profile</a></li>
-              <li><a class="dropdown-item" href="#">Log Out</a></li>
-            </ul>
-          </li>
-        </ul>
+        <div class="position-relative">
+          <a href="#" class="btn p-0">
+            <img src="./images/notification-icon.svg" alt="notifications" height="22">
+          </a>
+        </div>
+
+        <div class="dropdown">
+          <a class="dropdown-toggle d-flex align-items-center gap-2 text-dark text-decoration-none" href="#"
+            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="./images/profile.png" alt="profile" class="rounded-circle" height="32">
+            <span class="d-none d-sm-inline">John Doe</span>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="#">My Profile</a></li>
+            <li><a class="dropdown-item" href="#">Log Out</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
+
+  <div class="modal fade.w-100.h-100" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content border-0 shadow">
+        <div class="modal-body p-4">
+          <form class="d-flex align-items-center search-box mx-auto" style="max-width: 500px;">
+            <img src="./images/search-icon.svg" alt="search" height="18" class="me-2">
+            <input class="form-control border-0 shadow-none" type="search" placeholder="Search" autofocus>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="d-flex main-content">
 
@@ -130,10 +145,13 @@
     </div>
 
     <main class="flex-grow-1 p-4 p-md-5 bg-light">
-      <h4 class="mb-4" id="innermain">Analysis</h4>
+      <div id="formhead">
+        <h2 class="ms-1 ">Analysis</h2>
+      </div>
 
       <div class="form-module">
-        <div class="section-title">One Column</div>
+
+        <div class="section-title mt-2  ">One Column</div>
 
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Name">
@@ -214,14 +232,18 @@
 
         <div class="section-title">Other Design Elements</div>
 
-        <div class="form-group">
-          <label class="form-label">File Upload</label>
-          <input type="file" class="form-control" id="fileu">
+        <div class="custom-file-upload">
+          <input type="file" id="file-upload" name="file" />
+          <label for="file-upload">
+            <img src="./images/cloud-upload-icon.svg" alt="Upload icon" class="upload-icon" />
+            <span class="upload-text">Upload</span>
+          </label>
+          <span class="file-name">No item Selected</span>
         </div>
 
-        <div class="form-group">
-          <label class="form-label">Radio Button</label>
-          <div>
+        <div class="form-group ">
+          <label class="form-label section-title">Radio Button</label>
+          <div class="ms-3">
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="radioOptions" id="radio1" value="option1" checked>
               <label class="form-check-label" for="radio1">Option 1</label>
@@ -234,8 +256,8 @@
         </div>
 
         <div class="form-group">
-          <label class="form-label">Checkbox</label>
-          <div>
+          <label class="form-label section-title">Checkbox</label>
+          <div class="ms-3">
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="checkbox" id="check1" value="option1">
               <label class="form-check-label" for="check1">Option 1</label>
