--- a/HTML-TrainingAssignment/innerpage1.html
+++ b/HTML-TrainingAssignment/innerpage1.html
@@ -173,15 +173,15 @@
             <div class="col-md-6">
               <input type="text" class="form-control" placeholder="First name">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
               <input type="text" class="form-control" placeholder="John Doe">
             </div>
           </div>
           <div class="row mt-3">
-            <div class="col-md-6">
+            <div class="col-md-6 mt-1">
               <input type="password" class="form-control" placeholder="Password">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
               <select class="form-select">
                 <option>Default select</option>
                 <option>Option 2</option>
@@ -194,13 +194,13 @@
         <div class="section-title">Three Column</div>
         <div class="form-group">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 ">
               <input type="text" class="form-control" placeholder="Focus">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-4">
               <input type="password" class="form-control" placeholder="Password">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-4">
               <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted;">
             </div>
           </div>
@@ -209,7 +209,7 @@
         <div class="section-title">Four Column</div>
         <div class="form-group">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 mb-3">
               <input type="text" class="form-control" placeholder="Designation">
               <small class="help-block">Enter valid data</small>
             </div>
@@ -217,10 +217,10 @@
               <input type="text" class="form-control" placeholder="Name">
               <small class="help-block">Enter your full name as per ID</small>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mt-3">
               <input type="text" class="form-control" placeholder="John Doe">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 mt-4">
               <select class="form-select">
                 <option>Default select</option>
                 <option>Option 2</option>
@@ -310,7 +310,7 @@
         <div class="section-title mt-5">Tabs</div>
         <ul class="nav nav-tabs mb-3" id="myTab">
           <li class="nav-item">
-            <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button">Tab
+            <button class="nav-link active " id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button">Tab
               1</button>
           </li>
           <li class="nav-item">
@@ -323,7 +323,7 @@
           </li>
         </ul>
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active p-3 border bg-light" id="tab1">Lorem ipsum dolor sit amet consectetur
+          <div class="tab-pane fade show active p-3  bg-light" id="tab1">Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Non incidunt adipisci ipsa amet nulla excepturi quibusdam mollitia delectus sit natus.
           </div>
           <div class="tab-pane fade p-3 border bg-light" id="tab2">Lorem ipsum dolor sit amet, consectetur adipisicing
