--- a/HTML-TrainingAssignment/index.html
+++ b/HTML-TrainingAssignment/index.html
@@ -51,13 +51,13 @@
 
                             <div
                                 class="d-flex flex-column flex-sm-row justify-content-between align-items-sm-center gap-3 mb-4">
-                                <button type="submit" class="btn btn-danger btn-lg rounded-pill px-5 fw-medium">
+                                <button type="submit" class="btn btn-danger btn-lg rounded-pill px-5 fw-medium" onclick="window.location.href='dashboard.html'">
                                     Login
                                 </button>
                                 <a href="#" class="text-muted text-decoration-none small">Forgot Password?</a>
                             </div>
 
-                            <p class="text-center text-muted small">
+                            <p class=" text-muted small">
                                 Are you a new member? <a href="#"
                                     class="text-danger text-decoration-none fw-medium">Register here</a>
                             </p>
