--- a/HTML-TrainingAssignment/dashboard.html
+++ b/HTML-TrainingAssignment/dashboard.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style3.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -84,7 +85,7 @@
           <img src="./images/dashboard-active.svg" alt="Dashboard">
           <span><a href="./dashboard.html" style="text-decoration: none; color: #555;">Dashboard</a></span>
         </li>
-        <li>
+        <li >
           <img src="./images/graph-default.svg" alt="Analysis">
           <span><a href="./innerpage1.html" style="text-decoration: none; color: #555;">Analysis</a></span>
         </li>
