--- a/HTML-TrainingAssignment/index.html
+++ b/HTML-TrainingAssignment/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -20,16 +20,16 @@
             <div class="row g-0 shadow-lg rounded-4 overflow-hidden">
 
                 <div
-                    class="col-lg-6 bg-white d-flex align-items-center justify-content-center p-4 p-md-5 order-lg-1 order-1">
+                    class="col-lg-6 col-md-6 col-sm-6  d-flex align-items-center justify-content-center p-4 p-md-5 ">
                     <div class="hero-image-wrapper">
                         <img src="./images/hero-image.png" alt="Business professional"
                             class="img-fluid rounded-circle border border-5 border-white shadow">
                     </div>
                 </div>
 
-                <div class="col-lg-6 bg-white d-flex align-items-sm-center p-4 p-md-5 order-lg-2 order-2 ">
+                <div class="col-lg-6 col-md-6 col-sm-6 d-flex align-items-sm-center p-4 p-md-5 text-wrapper ">
                     <div class="w-100">
-                        <div class="text-icon-wrapper">
+                        <div >
                             <img src="./images/logo.svg" alt="Company Logo" class="mb-4" height="50">
 
                             <h1 class="fw-light fs-3 text-dark mb-2 ">
@@ -51,7 +51,7 @@
 
                             <div
                                 class="d-flex flex-column flex-sm-row justify-content-between align-items-sm-center gap-3 mb-4">
-                                <button type="submit" class="btn btn-danger btn-lg rounded-pill px-5 fw-medium" onclick="window.location.href='dashboard.html'">
+                                <button type="submit" class="btn btn-danger btn-lg rounded-pill px-5 fw-medium" onclick="window.location.href=' dashboard.html'">
                                     Login
                                 </button>
                                 <a href="#" class="text-muted text-decoration-none small">Forgot Password?</a>
