--- a/HTML-TrainingAssignment/innerpage1.html
+++ b/HTML-TrainingAssignment/innerpage1.html
@@ -166,7 +166,7 @@
           <label for="floatingInput1">Name</label>
         </div>
         <div class=" form-group">
-          <select class="form-select" style="margin-left: 10px;">
+          <select class="form-select" >
             <option>Default select</option>
             <option>Option 2</option>
             <option>Option 3</option>
@@ -215,8 +215,8 @@
               <input type="password" id="floatingPassword1" class="form-control" placeholder="Password">
               <label for="floatingPassword1">Password</label>
             </div>
-            <div class="col-md-4 form-group"  id="minscreen">
-              <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted; padding: 15px;">
+            <div class="col-md-4 "  id="minscreen"  >
+              <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted; padding: 15px 0px 15px 0px; ">
             </div>
           </div>
         </div>
