--- a/HTML-TrainingAssignment/innerpage1.html
+++ b/HTML-TrainingAssignment/innerpage1.html
@@ -70,7 +70,7 @@
       <div class="modal-content border-0 shadow">
         <div class="modal-body p-4">
           <form class="d-flex align-items-center search-box mx-auto" style="max-width: 500px;">
-            <img src="./images/search-icon.svg" alt="search" height="18" class="me-2">
+            <img src="./images/search-icon.svg" alt="search" height="16" class="me-2">
             <input class="form-control border-0 shadow-none" type="search" placeholder="Search" autofocus>
           </form>
         </div>
@@ -82,11 +82,11 @@
 
     <aside class="d-none d-lg-block bg-white border-end" style="width: 240px; min-height: 100vh;">
       <ul class="sidebar-menu list-unstyled m-0 pt-4">
-        <li class="active">
+        <li >
           <img src="./images/dashboard-active.svg" alt="Dashboard">
           <span><a href="./dashboard.html" style="text-decoration: none; color: #555;">Dashboard</a></span>
         </li>
-        <li>
+        <li class="is-active">
           <img src="./images/graph-default.svg" alt="Analysis">
           <span><a href="./innerpage1.html" style="text-decoration: none; color: #555;">Analysis</a></span>
         </li>
@@ -120,11 +120,11 @@
       </div>
       <div class="offcanvas-body p-0">
         <ul class="sidebar-menu list-unstyled m-0 pt-4">
-          <li class="active">
+          <li >
             <img src="./images/dashboard-active.svg" alt="Dashboard">
             <span><a href="./dashboard.html" style="text-decoration: none; color: #555;">Dashboard</a></span>
           </li>
-          <li>
+          <li class="is-active">
             <img src="./images/graph-default.svg" alt="Analysis">
             <span><a href="./innerpage1.html" style="text-decoration: none; color: #555;">Analysis</a></span>
           </li>
@@ -162,11 +162,11 @@
         <div class="section-title mt-2  ">One Column</div>
 
         <div class=" form-floating">
-          <input type="text" id="floatingInput1" class="form-control" placeholder="  Name">
-          <label for="floatingInput1">Name</label>
+          <input type="text" id="floatingInput1" class="form-control" placeholder="Name">
+          <label for="floatingInput1">  Name</label>
         </div>
         <div class=" form-group">
-          <select class="form-select" >
+          <select class="form-select" style="padding: 16px;" >
             <option>Default select</option>
             <option>Option 2</option>
             <option>Option 3</option>
@@ -195,7 +195,7 @@
               <label for="floatingPassword">Password</label>
             </div>
             <div class="col-md-6 ">
-              <select class="form-select">
+              <select class="form-select" style="padding: 16px;">
                 <option>Default select</option>
                 <option>Option 2</option>
                 <option>Option 3</option>
@@ -216,7 +216,7 @@
               <label for="floatingPassword1">Password</label>
             </div>
             <div class="col-md-4 "  id="minscreen"  >
-              <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted; padding: 15px 0px 15px 0px; ">
+              <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted; padding: 15px 0px 15px 15px; ">
             </div>
           </div>
         </div>
@@ -239,7 +239,7 @@
               <label for="floatingInput8">Username</label>
             </div>
             <div class="col-md-3 "  id="minscreen">
-              <select class="form-select">
+              <select class="form-select" style="padding: 16px;">
                 <option> Default select</option>
                 <option>Option 2</option>
                 <option>Option 3</option>
