--- a/HTML-TrainingAssignment/innerpage1.html
+++ b/HTML-TrainingAssignment/innerpage1.html
@@ -216,7 +216,7 @@
               <label for="floatingPassword1">Password</label>
             </div>
             <div class="col-md-4 "  id="minscreen"  >
-              <input type="text" class="form-control" placeholder="John Doe" disabled style="border-style: dotted; padding: 15px 0px 15px 15px; ">
+              <input type="text" class="form-control" placeholder="John Doe" disabled style="border:5px solid gray dotted; padding: 15px 0px 15px 15px; ">
             </div>
           </div>
         </div>
@@ -327,7 +327,7 @@
 
         <div class="section-title mt-5">Tabs</div>
         <ul class="nav nav-tabs mb-3" id="myTab">
-          <li class="nav-item">
+          <li class="nav-item ">
             <button class="nav-link active " id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button">Tab
               1</button>
           </li>
